[tool.poetry]
name = "python-probabilistic-examples"
version = "0.1.0"
description = ""
authors = ["Saeed Hadikhanloo <saeed.hadikhanloo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
